# diopser

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: editor.cpp  editor.h  processor.cpp  processor.h  utils.cpp  utils.h
